# AccessSphere-AI

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  index.html  knip.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.app.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml
app/: __init__.py  assistant.py  data.py  main.py  offline.py  schemas.py  tools.py
data/: venues.json
src/: App.tsx  index.css
src/components/: Layout.css  Layout.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx  Topbar.css  Topbar.tsx
src/context/: AccessibilityContext.tsx
src/pages/: Assistant.css  Assistant.test.tsx  Assistant.tsx  Dashboard.css  Dashboard.test.tsx  Dashboard.tsx  Evaluation.css  Evaluation.test.tsx  Evaluation.tsx  LiveMap.css  LiveMap.test.tsx  LiveMap.tsx  Navigation.css  Navigation.test.tsx  Navigation.tsx  Planner.css  Planner.test.tsx  Planner.tsx  Profile.css  Profile.test.tsx  Profile.tsx  Vision.css  Vision.test.tsx  Vision.tsx
tests/: test_backend.py
